--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,6 @@ services:
   - type: web
     name: expense_tracker
     env: node
+    rootDir: server
     buildCommand: npm install
     startCommand: npm start
