--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.3.4",
-    "vite-plugin-pwa": "^0.20.1"
+    "vite": "^5.3.4"
   }
 }
