--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-lottie-player": "^2.1.0",
+    "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
