--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-modern-drawer": "^1.4.0",
+    "react-nice-avatar": "^1.5.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
