--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-modern-drawer": "^1.4.0",
     "react-nice-avatar": "^1.5.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
